examples/test/testpolicy6425.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6425
  namespace: namespace493
spec:
  podSelector:
    matchLabels:
      key24: value1
      key47: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value11
          key17: value7
      podSelector:
        matchLabels:
          key41: value16
          key6: value43
          key47: value34
